--- a/js/particlesjs-config.json
+++ b/js/particlesjs-config.json
@@ -8,7 +8,7 @@
       }
     },
     "color": {
-      "value": "#E0E0E0"
+      "value": "#000000"
     },
     "shape": {
       "type": "circle",
